# audiocard.io

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  demo_alsa.cpp  demo_probe.h  probe_alsa.cpp  probe_asio.cpp  probe_coreaudio.cpp  probe_jack.cpp  probe_pulse.cpp  probe_wasapi.cpp
include/: aio_asio.h  aio_audio.h  aio_jack.h
include/actl/: aio_unique_ptr.h
include/linux/: aio_alsa.h  aio_alsa_midi.h  aio_pulse.h
include/linux/alsa/: aio_alsa_cardinfo.h  aio_alsa_ctl.h  aio_alsa_deviceinfo.h  aio_alsa_pcm.h
include/osx/: aio_asioosx.h  aio_coreaudio.h
include/osx/corefoundation/: cf_string.h
include/windows/: aio_asiowin32.h  aio_string.h  aio_wasapi.h  aio_waveformatex.h
include/windows/com/: aio_coinit.h  aio_com.h  aio_propvariant.h
src/: aio_asio.cpp  aio_jack.cpp
src/linux/: aio_alsa.cpp  aio_alsa_midi.cpp  aio_pulse.cpp
src/osx/: aio_asioosx.cpp  aio_coreaudio.cpp
src/windows/: aio_wasapi.cpp
tests/: CMakeLists.txt  tst_alsa.cpp
